2022-01-07   Ales Cepek <cepek@gnu.org>

	New release 2.17

	* library libgama changed from OBJECTS to static in CMakeLists.txt

	* minor changes needed by qgama to implement xml input format export

	* new function Observation::raw_value()

	Observation function value() returns observed value with all
	corrections added (if they are defined).  New function raw_value()
	returns raw observed value without the corrections. This function
	is needed in qgama GUI observation editor.

	* HACKING: Describe release process (by Greg Troxel)

	Describe the release process, including some checks.  This is
	partially capturing existing practice, and is not meant to be a
	significant change.
	Reorder to put the long build tools discussion last, fix typos.


2021-11-25   Ales Cepek <cepek@gnu.org>

	New release 2.16 (maintenance release)

	* Top level directory 'bin' was renamed to 'src'. Originally 'lib'
	contained only gama-local.cpp, gama-g3 was added later and some
	more helper application like gama-local-yaml2gkf also. The
	directory was named 'bin' because autools build system puts Gama
	application binaries there when 'make' is run. But the final
	destination for Gama executables is defined by the command 'make
	install' where option --prefix can change the implicit
	destination. Thus the directory is more important because of the
	source codes it contains than because of the compiled binaries
	stored there.

	* Prepared gama-local for more observational correction to be
	added in future releases. Currently only benchmark corrections for
	height of instrument and hoieght of sight are implemented.

	* Gama-local option '--updated-xml' was renamed to '--export'
	and similarly was renamed the corresponging test
	tests/gama-local/gama-local-export.sh

	* More input examples have been added to the gama-local test suite

2021-09-20   Ales Cepek <cepek@gnu.org>

	New release 2.15 (maintenance release)

	* observation reductions are separated from observed values in